my-apps/homepage-dashboard/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-dashboard
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
  hostnames:
  - "homepage.mvt.com.ar"
  rules:
  - matches:
    - path:
        type: PathPrefix 
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: homepage-dashboard
      port: 3000
      weight: 1
